Yamls/virtuoso/virtuoso-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: virtuoso-app-secure
  namespace: virtuoso
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - virtuoso.cloud.nanosolveit.eu
    secretName: virtuso-app-cert-ingress
  rules:
  - host: virtuoso.cloud.nanosolveit.eu
    http:
      paths:
      - backend:
          serviceName: virtuoso-exposed
          servicePort: 8890
        path: /
